# editboi

./: README.md  code_editor.py  colorscheme.py  completer.py  highlighter.py  main.py  mainwindow.py  pyproject.toml  python_code_editor.py  python_highlighter.py
custom/: python.scm
custom/python/: highlights.scm  indents.scm
