[project]
name = "editboi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.11.1",
    "tree-sitter>=0.26.0",
    "tree-sitter-language-pack>=1.12.1",
    "tree-sitter-python>=0.25.0",
]

[dependency-groups]
dev = [
    "pylsp-mypy>=0.7.3",
    "python-lsp-black>=2.0.0",
    "python-lsp-server[all]>=1.14.0",
]
[tool.mypy]
strict=true
